--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ deploy:
   # name of elasticbeanstalk instance
   app: "multi-docker"
   # env of elasticbeanstalk instance
-  env: "MultiDocker-env"
+  env: "MultiDocker-env-1"
   # travis zip the contents can deploy to a S3 bucket (check at s3 service dashbash)
   bucket_name: "elasticbeanstalk-us-east-2-873739410082"
   bucket_path: "multi-docker"
